--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,8 @@ body {
   bottom: 20px; /* stick to bottom */
   left: 50%;
   transform: translateX(-50%);
-  width: 90%;
+  width: 80%;
+  max-width: 400px;
   padding: 10px;
   border-radius: 20px;
   border: 1px solid #ccc;
@@ -583,5 +584,3 @@ body {
         padding: 1rem;
     }
 }
-
-
